alt file reading method